--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test:lint": "npx eslint ."
   },
   "dependencies": {
     "@chartiful/react-native-chart-builder": "^0.1.8",
