--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test:lint": "npx eslint ."
+    "test:lint": "npx eslint .",
+    "test:unit": "npx jest",
+    "test": "npm run test:lint && npm run test:unit"
   },
   "dependencies": {
     "@chartiful/react-native-chart-builder": "^0.1.8",
@@ -42,6 +44,9 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.20",
     "@types/ramda": "^0.27.38",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
@@ -57,6 +62,9 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^40.0.2",
+    "jest-expo-enzyme": "^1.0.4",
     "prettier": "^2.2.1",
     "typescript": "~3.9.5"
   },
