--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "expo": "~39.0.2",
     "expo-auth-session": "^3.1.0",
     "expo-linear-gradient": "~8.3.0",
+    "expo-localization": "^10.0.0",
     "expo-random": "^11.0.0",
     "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "^9.0.0",
+    "i18n-js": "^3.8.0",
     "js-base64": "^3.6.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
@@ -46,6 +48,7 @@
     "@babel/core": "~7.9.0",
     "@babel/preset-typescript": "^7.13.0",
     "@types/enzyme": "^3.10.8",
+    "@types/i18n-js": "^3.8.0",
     "@types/jest": "^26.0.20",
     "@types/ramda": "^0.27.38",
     "@types/react": "~16.9.35",
