--- a/package.json
+++ b/package.json
@@ -13,32 +13,33 @@
   "dependencies": {
     "@chartiful/react-native-chart-builder": "^0.1.8",
     "@chartiful/react-native-horizontal-bar-graph": "^0.1.2",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
-    "expo": "~39.0.2",
-    "expo-auth-session": "^3.1.0",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-localization": "^10.0.0",
-    "expo-random": "^11.0.0",
-    "expo-secure-store": "~9.2.0",
-    "expo-status-bar": "~1.0.2",
-    "expo-web-browser": "^9.0.0",
+    "expo": "^40.0.0",
+    "expo-auth-session": "~3.0.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-localization": "~9.1.0",
+    "expo-random": "~10.0.0",
+    "expo-secure-store": "~9.3.0",
+    "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
+    "genius-lyrics-api": "^3.0.6",
     "i18n-js": "^3.8.0",
     "js-base64": "^3.6.0",
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
     "react-query": "^3.12.0",
     "spotify-web-api-js": "^1.5.1",
@@ -66,10 +67,10 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
-    "jest-expo": "^40.0.2",
+    "jest-expo": "^40.0.0",
     "jest-expo-enzyme": "^1.0.4",
     "prettier": "^2.2.1",
-    "typescript": "~3.9.5"
+    "typescript": "~4.0.0"
   },
   "private": false
 }
